updated message errors to be array of objects
